--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudwatch-backend-for-statsd",
-  "version": "0.0.5",
+  "version": "0.0.6-beta.0",
   "description": "simple cloudwatch backend for statsd",
   "main": "index.js",
   "scripts": {
